--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,14 @@
   }
 }
 
-.App-header {
+.body {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2vmin); */
   color: white;
 }
 
