--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,17 @@
   }
 } */
 
-.body {
-  /* background-color: #282c34;
-  min-height: 100vh; */
+/* .body {
+  background-color: #282c34;
+  min-height: 100vh; */ 
   
-  /* display: flex;
+  /* /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin); */
   /* color: white; */
-}
+/* } */
 
 /* .App-link {
   color: #61dafb;
